# dotfiles

./: .gitignore  cherry_catppuccin.cfg
bspwm/: bspwmrc
btop/: btop.conf
certificates/: homeissuer.crt  truenas-intermediate-ca.crt  truenasca.crt
configurations/alacritty/: alacritty.toml
configurations/ashell/: config.toml
configurations/bspwm/: bspwmrc
configurations/btop/: btop.conf
configurations/ghostty/: config
configurations/hypr/: hyprland.conf
configurations/kitty/: kitty.conf
configurations/lazygit/: config.yml
configurations/nvim/: init.lua  lazy-lock.json
configurations/nvim/template/: .prettierrc  CHANGELOG.md  CMakeLists.txt  VCMakeLists.tpl  basic-flake.tpl  basicflake.nix  clangformat.tpl  class.cs  conanfile.tpl  default-flake.nix  flake-parts.tpl  flake.nix  flakeparts.nix  function.tpl  header.hpp  interface.cs  pyproject.toml  shell.nix  shell.tpl  towncrier.toml  towncrier_template.md
configurations/picom/: picom.conf
configurations/powerlevel10k/: macp10k.zsh  p10k.zsh
configurations/ranger/: rc.conf
configurations/stylus/: stylus-2024-11-25.json
configurations/sxhkd/: sxhkdrc
configurations/tint2/: tint2rc
configurations/tmux/: tmux.conf
configurations/waybar/: style.css
configurations/wezterm/: macos.lua  utils.lua  wezterm.lua  windows.lua
configurations/wofi/: config  style.css
hypr/: hyprland.conf
hypr/scripts/: setbackground.sh
kitty/: kitty.conf
machines/msi_laptop/: configuration.nix
machines/virtual_machine/: configuration.nix
modules/: wireless.nix
modules/homemanager/: betterlockscreen.nix  bspwm.nix  btop.nix  default.nix  dunst.nix  fusuma.nix  kitty.nix  neovim.nix  nerdfonts.nix  picom.nix  polybar.nix  ranger.nix  sxhkd.nix  zsh.nix  (+2 more)
nix/: flake.nix
nixnew/: flake.nix
nvim/: init.lua  lazy-lock.json
picom/: picom.conf
profiles/: bspwm.nix  common.nix  nvidia.nix  pulseaudio.nix
ranger/: scope.sh
services/: neovim.nix  nerdfonts.nix  polybar.nix  rofi.nix  zsh-plugins.nix  zsh.nix
sxhkd/: sxhkdrc
waybar/: config.jsonc  style.css
wezterm/: macos.lua  utils.lua  wezterm.lua
zathura/: zathurarc
(+483 files in other folders)
